# tidecoin

./: .clangd  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  README.md  SECURITY.md  libtidecoinkernel.pc.in  llms.txt
.github/: PULL_REQUEST_TEMPLATE.md
.tx/: config
ai-docs/: auxpow-functional-tests.md  auxpow-scrypt-plan.md  ecdsa-der-surface-audit.md  functional-tests-fix-report.md  notes.md  op_sha512_plan.md  original-falcon-verification.md  phase0-tidecoin-diff.md  plan.md  pq-dummy-signature-and-sizing-plan.md  pq-multisig-tests-plan.md  pq-tests-migration-plan.md  pqclean-vendor-governance-plan.md  pqhd-integration-progress.md  pqhd-removal-plan.md  pqhd.md  psbt-hardening-fix-report.md  repository-confluence-audit.md  taproot-removal.md  tidecoin-config-binary-cleanup-runbook.md  unit-test-controls.md  unit-test-failures-map.md  whitepaper.md
cmake/: introspection.cmake
contrib/: README.md
depends/: Makefile
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assumeutxo.md  benchmarking.md  bips.md  bitcoin-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  pq-rpc.md  pq-script-coverage-gap-matrix.md  pq-script-test-coverage-checklist.md  pq-script-test-coverage-plan.md  (+13 more)
src/pq/: CMakeLists.txt  VERSIONS.toml  falcon1024.c  falcon512.c  kem.cpp  mldsa44.c  mldsa65.c  mldsa87.c  pq_api.h  pq_scheme.h  pq_txsize.h  pqhd_kdf.cpp  pqhd_kdf.h  pqhd_keygen.cpp  pqhd_params.h  randombytes.cpp  randombytes.h
src/pq/falcon-1024/: api.h  inner.h  pqclean.c
src/pq/falcon-512/: pqclean.c
src/pq/ml-dsa-44/: api.h  sign.c
src/pq/ml-dsa-65/: api.h  sign.c
src/pq/ml-dsa-87/: api.h  sign.c
src/pq/ml-kem-512/: api.h  indcpa.c  kem.c  kem.h  verify.c
src/pq/patches/: README.md
src/sign/: CMakeLists.txt  randombytes.cpp  randombytes.h
src/sign/falcon-512/: api.h  inner.h  pqclean.c
(+686 files in other folders)
